--- a/style.css
+++ b/style.css
@@ -24,5 +24,71 @@ hr {
 }
 
 .gallery-item {
-    
+    max-width: 100%;
+    border-radius: 5px;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+    transition: all .3s;
+    overflow: hidden;
+    position: relative;
+}
+
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 1.5rem;
+}
+
+.image {
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+    object-fit: cover;
+}
+
+.middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate (-50%, -50%);
+    text-align: center;
+}
+
+.gallery-item:hover .image {
+    filter: grayscale(1);
+}
+
+.gallery-item:hover .middle {
+    opacity: 1;
+}
+
+.gallery-item:hover {
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+}
+
+.text {
+    color: white;
+    font-size: 2.5em;
+    padding: 16px 32px;
+    font-family: Oswald, sans-serif;
+}
+
+@media (max-width: 500px) {
+    .gallery-item,
+    body{
+        max-width: 30%;
+        grid-column: 2;
+        font-family: Oswald, sans-serif;
+        text-align: left;
+    }
+    div.container, h1 {
+        text-align: left;
+        margin-left: 2em;
+    }
+
+    div.text
 }
